# kazoe

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  count.rs  main.rs
tests/: integration.rs
